# TinyCanvas

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: canvas.cpp  canvas.h  editor.cpp  editor.h  font.h  main.cpp  types.h
